feat: locallogin 로컬 로그인

--- a/src/main/resources/templates/account/signup.html
+++ b/src/main/resources/templates/account/signup.html
@@ -110,20 +110,27 @@
                                                 <input id="tel" name="tel" class="input-text input-text--primary-style"
                                                        type="text" placeholder=" '-'을 포함해주세요 ">
                                             </div>
+                                            <div class="u-s-m-b-15" style="display: flex; justify-content: end;">
+                                                <button id="tel-check2" class="btn btn--e-transparent-brand-b-2">인증번호
+                                                </button>
+                                            </div>
+
 
                                         </div>
-                                        <!--                                        <div id="result-tel-div" class="u-s-m-b-10">-->
-                                        <!--                                            <label id="result-tel-label" class="gl-label" style="color: red">휴대폰검증에러</label>-->
-                                        <!--                                        </div>-->
+                                                                                <div id="result-tel-div" class="u-s-m-b-10">
+                                                                                    <label id="result-tel-label" class="gl-label" style="color: red">휴대폰검증에러</label>
+                                                                                </div>
 
                                         <div id="result-tel2-div" class="u-s-m-b-10">
                                             <label id="result-tel2-label" class="gl-label"
                                                    style="color: red"></label>
                                         </div>
 
-                                        <!--                                        <div class="gl-dob u-s-m-b-5">-->
-                                        <!--                                            <input id="auth-phone" name="auth-phone" class="input-text input-text&#45;&#45;primary-style" placeholder="인증번호를 입력해주세요" >-->
-                                        <!--                                        </div>-->
+
+
+                                                                                <div class="gl-dob u-s-m-b-5">
+                                                                                    <input id="auth-phone" name="auth-phone" class="input-text input-text--primary-style" placeholder="인증번호를 입력해주세요" >
+                                                                                </div>
 
                                         <div class="gl-inline">
                                             <div class="u-s-m-b-15">
@@ -142,7 +149,7 @@
                                                 <div class="gl-dob">
                                                     <select id="gender" name="gender"
                                                             class="select-box select-box--primary-style u-w-100">
-                                                        <option selected="">성별</option>
+                                                        <option selected=""></option>
                                                         <option value="male">남자</option>
                                                         <option value="female">여자</option>
                                                     </select>
