fix: Fix login / signup html

--- a/src/main/resources/templates/account/signup.html
+++ b/src/main/resources/templates/account/signup.html
@@ -149,7 +149,7 @@
                                                 <div class="gl-dob">
                                                     <select id="gender" name="gender"
                                                             class="select-box select-box--primary-style u-w-100">
-                                                        <option selected=""></option>
+                                                        <option selected="">성별</option>
                                                         <option value="male">남자</option>
                                                         <option value="female">여자</option>
                                                     </select>
