--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -70,7 +70,7 @@
     <!--====== App Content ======-->
     <div class="app-content">
         <!--====== Section 2 ======-->
-        <div class="u-s-p-y-60">
+        <div class="u-s-p-y-30">
             <!--====== Section Intro ======-->
             <div class="section__intro u-s-m-b-16">
                 <div class="container">
@@ -88,7 +88,7 @@
         <!--====== End - Section 2 ======-->
 
         <!--====== Section 3 ======-->
-        <div class="u-s-p-y-60" id="show-product-div">
+        <div class="u-s-p-y-30" id="show-product-div">
             <!--====== Section Content ======-->
             <div class="section__content" id="sticky-header">
                 <div class="container">
@@ -112,6 +112,17 @@
             <!--====== Section Content ======-->
             <div class="section__content" id="product-area-div">
                 <div class="container">
+
+                    <!--====== Search Form ======-->
+                    <div class="u-s-p-y-20" style="display: flex; justify-content: end;">
+                        <form class="main-form">
+                            <label for="main-search"></label>
+                            <input class="input-text input-text--border-radius input-text--style-1" type="text"
+                                   id="main-search" placeholder="검색">
+                            <button class="btn btn--icon fas fa-search main-search-button" type="submit"></button>
+                        </form>
+                    </div>
+
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="<!--filter__grid-wrapper--> u-s-m-t-30">
