Fix: 버튼 클릭시 페이지 리프레시되던 현상 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -119,7 +119,7 @@
                             <label for="main-search"></label>
                             <input class="input-text input-text--border-radius input-text--style-1" type="text"
                                    id="main-search" placeholder="검색">
-                            <button class="btn btn--icon fas fa-search main-search-button" type="submit"></button>
+                            <button class="btn btn--icon fas fa-search main-search-button" type="button"></button>
                         </form>
                     </div>
 
