Fix: 엔터 입력시 페이지 리프레시되던 현상 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -115,12 +115,12 @@
 
                     <!--====== Search Form ======-->
                     <div class="u-s-p-y-20" style="display: flex; justify-content: end;">
-                        <form class="main-form">
+                        <div class="main-form">
                             <label for="main-search"></label>
                             <input class="input-text input-text--border-radius input-text--style-1" type="text"
                                    id="main-search" placeholder="검색">
                             <button class="btn btn--icon fas fa-search main-search-button" type="button"></button>
-                        </form>
+                        </div>
                     </div>
 
                     <div class="row">
