style: Delete unnecessary code in gifticon/add.html

--- a/src/main/resources/templates/gifticon/add.html
+++ b/src/main/resources/templates/gifticon/add.html
@@ -28,11 +28,6 @@
                             <div class="section__text-wrap">
                                 <h1 class="section__heading u-c-secondary">기프티콘 등록</h1>
                                 <h3>등록 할 기프티콘을 올려주세요</h3>
-                                <!--                                <div th:each="image : ${imageList}">-->
-                                <!--                                    <span th:text="${image}"></span>-->
-
-                                <!--                                </div>-->
-                                <!--                                <div data-image-list="${imageList}" id="gifticonData" style="display: none;"></div>-->
                             </div>
                         </div>
                     </div>
@@ -72,9 +67,7 @@
                             <div class="route-box">
                                 <div class="route-box__g"></div>
                                 <div class="route-box__g">
-                                    <a class="route-box__link" href="/wishlist"><i class="fas fa-trash"></i>
-                                        <span>전체 삭제</span>
-                                    </a>
+                                    <a class="route-box__link"></a>
                                 </div>
                             </div>
                         </div>
@@ -227,9 +220,7 @@
 
 <!--====== Vendor Js ======-->
 <script src="/js/vendor.js"></script>
-<script src="https://t1.kakaocdn.net/kakao_js_sdk/2.5.0/kakao.min.js"
-        integrity="sha384-kYPsUbBPlktXsY6/oNHSUDZoTX6+YI51f63jCPEIPFP09ttByAdxd2mEjKuhdqn4"
-        crossOrigin="anonymous"></script>
+<script src="https://t1.kakaocdn.net/kakao_js_sdk/2.5.0/kakao.min.js" integrity="sha384-kYPsUbBPlktXsY6/oNHSUDZoTX6+YI51f63jCPEIPFP09ttByAdxd2mEjKuhdqn4" crossOrigin="anonymous"></script>
 <script src="/js/gifticon/kakao-chatbot.js"></script>
 <script src="/js/gifticon/add.js"></script>
 <script src="/js/gifticon/storage/list.js"></script>
