fix: user account

--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -59,7 +59,7 @@
                                             </div>
 
                                             <div class="u-s-m-b-30">
-                                                <button id="login-btn" class="btn btn--e-transparent-brand-b-2" type="submit">로그인</button>
+                                                <button id="login-btn" class="btn btn--e-transparent-brand-b-2">로그인</button>
                                             </div>
                                         </div>
                                             <!--카카오 로그인 -->
