feat : Dynamic select component in admin
등록 여부 라디오 버튼 선택 시 동적으로 select 태그를 보여주게 변경
ProductAddRequest의 @Valid 적용 및 exception / error 처리

--- a/src/main/resources/templates/admin/admin-index.html
+++ b/src/main/resources/templates/admin/admin-index.html
@@ -219,15 +219,14 @@
                                     </div>
 
                                     <div class="gl-inline u-s-m-y-15">
-                                        <div id="category-div">
+                                        <div id="category-div" style="display: none">
                                             <select id="category-select" name="category" class="select-box select-box--primary-style u-w-100">
-                                                <option selected="">카테고리</option>
+                                                <option selected="" value="">카테고리</option>
                                             </select>
                                         </div>
 
-                                        <div id="cancel-reason">
-                                            <select id="cancel-reason-select" name="cancelReason"
-                                                    class="select-box select-box--primary-style u-w-100">
+                                        <div id="cancel-reason-div" style="display: none">
+                                            <select id="cancel-reason-select" name="cancelReason" class="select-box select-box--primary-style u-w-100">
                                                 <option selected="">거절 사유</option>
                                                 <option value="due">유효기간이 유효하지 않음</option>
                                                 <option value="name">상품명이 올바르지 않음</option>
