Fix: 결제 완료 후 이동하는 페이지 변경 (리액트 사용을 위해)

--- a/src/main/resources/templates/payment/close.html
+++ b/src/main/resources/templates/payment/close.html
@@ -7,7 +7,7 @@
 <body>
   <script th:inline="javascript">
       if ([[${param.redirect}]]) {
-          opener.location.href = "/";
+          opener.location.href = "http://localhost:3000";
       }
       window.close();
   </script>
